# chat-app

./: Makefile  README.md  docs3.md  docs4.md  docs6.md
backend/: .gitignore  Makefile  README.md  app.py  main.py  pika_client.py  pubsub.py  pyproject.toml  requirements.txt
frontend/: Makefile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx
ps-chat-fastapi/: .gitignore  Makefile  README.md  app.py  connection.py  main.py  requirements.txt
ps-chat-vite-react/: .prettierrc.json  Makefile  README.md  package-lock.json  package.json  tsconfig.node.json
ps-chat-vite-react/src/: App.css  App.tsx
