[project]
name = "backend"
version = "0.1.0"
description = "backend for chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standart]>=0.115.5",
    "google-cloud-pubsub>=2.27.1",
    "pydantic>=2.10.2",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]
